--- a/app/src/main/res/layout/activity_desks_page.xml
+++ b/app/src/main/res/layout/activity_desks_page.xml
@@ -45,8 +45,12 @@
         android:id="@+id/button"
         android:layout_width="113dp"
         android:layout_height="77dp"
+        android:backgroundTint="#002561"
         android:layout_marginBottom="52dp"
         android:text="Go"
+        android:fontFamily="@font/ericsson_font"
+        android:textSize="30sp"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -61,6 +65,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="From"
+        android:fontFamily="@font/ericsson_font"
+        android:textColor="#002561"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/spinner2"
         app:layout_constraintEnd_toEndOf="@+id/spinner2"
@@ -78,6 +84,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="To"
+        android:fontFamily="@font/ericsson_font"
+        android:textColor="#002561"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/spinner1"
         app:layout_constraintEnd_toEndOf="@+id/spinner1"
