--- a/app/src/main/res/layout/activity_maps_view.xml
+++ b/app/src/main/res/layout/activity_maps_view.xml
@@ -4,50 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context=".Screen2">
+    tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="214dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="236dp"
-        android:gravity="center"
-        android:text="Map"
+        android:id="@+id/button1"
+        style="@android:style/Widget.Button"
+        android:backgroundTint="#002561"
+        android:layout_width="270dp"
+        android:layout_height="118dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Maps"
+        android:fontFamily="@font/ericsson_font"
+        android:textSize="50sp"
         android:textColor="#ffffff"
-        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="217dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Desk"
-        android:textSize="30sp"
+        android:layout_width="270dp"
+        android:backgroundTint="#002561"
+        android:layout_height="118dp"
+        android:text="Desks"
+        android:fontFamily="@font/ericsson_font"
+        android:textSize="50sp"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="#ffffff"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.72" />
+        app:layout_constraintVertical_bias="0.646" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="386dp"
-        android:layout_height="126dp"
-        android:background="@color/colorPrimary"
-        android:gravity="center"
-        android:text="Choose from Below"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="50dp" />
+
+
+
 </android.support.constraint.ConstraintLayout>
+
