--- a/app/src/main/res/layout/activity_desks_page.xml
+++ b/app/src/main/res/layout/activity_desks_page.xml
@@ -7,7 +7,7 @@
     tools:context=".DesksPage">
 
     <Spinner
-        android:id="@+id/spinner1"
+        android:id="@+id/fromDropDown"
         android:layout_width="244dp"
         android:layout_height="74dp"
         android:layout_marginBottom="8dp"
@@ -16,16 +16,16 @@
         android:layout_marginTop="240dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/goButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.138"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/toDropDown"
         android:layout_width="244dp"
         android:layout_height="74dp"
         android:layout_marginBottom="8dp"
@@ -34,15 +34,15 @@
         android:layout_marginTop="88dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown"
-        app:layout_constraintBottom_toTopOf="@+id/spinner1"
+        app:layout_constraintBottom_toTopOf="@+id/fromDropDown"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.138"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/goButton"
         android:layout_width="113dp"
         android:layout_height="77dp"
         android:backgroundTint="#002561"
@@ -57,41 +57,41 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewFrom"
         android:layout_width="140dp"
         android:layout_height="33dp"
         android:layout_marginBottom="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="From"
         android:fontFamily="@font/ericsson_font"
+        android:text="From"
         android:textColor="#002561"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner2"
-        app:layout_constraintEnd_toEndOf="@+id/spinner2"
+        app:layout_constraintBottom_toTopOf="@+id/toDropDown"
+        app:layout_constraintEnd_toEndOf="@+id/toDropDown"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/spinner2"
+        app:layout_constraintStart_toStartOf="@+id/toDropDown"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewTo"
         android:layout_width="140dp"
         android:layout_height="33dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="To"
         android:fontFamily="@font/ericsson_font"
+        android:text="To"
         android:textColor="#002561"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner1"
-        app:layout_constraintEnd_toEndOf="@+id/spinner1"
+        app:layout_constraintBottom_toTopOf="@+id/fromDropDown"
+        app:layout_constraintEnd_toEndOf="@+id/fromDropDown"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/spinner1"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2"
+        app:layout_constraintStart_toStartOf="@+id/fromDropDown"
+        app:layout_constraintTop_toBottomOf="@+id/toDropDown"
         app:layout_constraintVertical_bias="0.862" />
 
 </android.support.constraint.ConstraintLayout>
