--- a/app/src/main/res/layout/activity_full_map.xml
+++ b/app/src/main/res/layout/activity_full_map.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent">
 
     <com.otaliastudios.zoom.ZoomLayout
-        android:layout_width="348dp"
-        android:layout_height="507dp"
+        android:layout_width="366dp"
+        android:layout_height="499dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -20,9 +20,9 @@
         app:layout_constraintVertical_bias="0.0">
 
         <com.otaliastudios.zoom.ZoomImageView
-            android:id="@+id/zoomImageView"
-            android:layout_width="338dp"
-            android:layout_height="495dp"
+            android:id="@+id/fullInternalMap"
+            android:layout_width="352dp"
+            android:layout_height="487dp"
             app:srcCompat="@drawable/anothermap" />
     </com.otaliastudios.zoom.ZoomLayout>
 
