--- a/app/src/main/res/layout/activity_full_map.xml
+++ b/app/src/main/res/layout/activity_full_map.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#454545">
 
     <com.otaliastudios.zoom.ZoomLayout
-        android:layout_width="366dp"
-        android:layout_height="499dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        android:id="@+id/zoomLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:minZoom="0.7"
+        app:minZoomType="zoom"
+        app:maxZoom="3.0"
+        app:maxZoomType="zoom"
+        >
 
-        <com.otaliastudios.zoom.ZoomImageView
+        <ImageView
             android:id="@+id/fullInternalMap"
-            android:layout_width="352dp"
-            android:layout_height="487dp"
-            app:srcCompat="@drawable/anothermap" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ericssonmapwhitebackgroundcroppp" />
+
     </com.otaliastudios.zoom.ZoomLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
