--- a/app/src/main/res/layout/activity_first_floor_route.xml
+++ b/app/src/main/res/layout/activity_first_floor_route.xml
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/firstfloor3" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/zoneEightStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -35,7 +35,7 @@
         app:srcCompat="@drawable/zoneeightstartpin" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/zoneEightEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -51,7 +51,7 @@
         app:srcCompat="@drawable/zoneeightendpin" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/zoneNineStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -67,7 +67,7 @@
         app:srcCompat="@drawable/zoneninestartpin" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/zoneNineEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="104dp"
