--- a/app/src/main/res/layout/activity_ground_floor_route.xml
+++ b/app/src/main/res/layout/activity_ground_floor_route.xml
@@ -16,6 +16,224 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/groundfloor3" />
+
+    <ImageView
+        android:id="@+id/zoneOneStart"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.083"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
+        app:layout_constraintVertical_bias="0.322"
+        app:srcCompat="@drawable/zoneonestartpin" />
+
+    <ImageView
+        android:id="@+id/zoneOneEnd"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.074"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
+        app:layout_constraintVertical_bias="0.391"
+        app:srcCompat="@drawable/zoneoneendpin" />
+
+    <ImageView
+        android:id="@+id/zoneTwoStart"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
+        app:layout_constraintVertical_bias="0.333"
+        app:srcCompat="@drawable/zonetwostartpin" />
+
+    <ImageView
+        android:id="@+id/zoneTwoEnd"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.175"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.411"
+        app:srcCompat="@drawable/zonetwoendpin" />
+
+    <ImageView
+        android:id="@+id/zoneThreeStart"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.28"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.329"
+        app:srcCompat="@drawable/zonethreestartpin" />
+
+    <ImageView
+        android:id="@+id/zoneThreeEnd"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.279"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
+        app:layout_constraintVertical_bias="0.41"
+        app:srcCompat="@drawable/zonethreeendpin" />
+
+    <ImageView
+        android:id="@+id/zoneFourStart"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
+        app:layout_constraintVertical_bias="0.441"
+        app:srcCompat="@drawable/zonefourstartpin" />
+
+    <ImageView
+        android:id="@+id/zoneFourEnd"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
+        app:layout_constraintVertical_bias="0.442"
+        app:srcCompat="@drawable/zonefourendpin" />
+
+    <ImageView
+        android:id="@+id/zoneFiveStart"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.42"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.327"
+        app:srcCompat="@drawable/zonefivestartpin" />
+
+    <ImageView
+        android:id="@+id/zoneFiveEnd"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.594"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
+        app:layout_constraintVertical_bias="0.341"
+        app:srcCompat="@drawable/zonefiveendpin" />
+
+    <ImageView
+        android:id="@+id/zoneSixStart"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.907"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499"
+        app:srcCompat="@drawable/zonesixstartpin" />
+
+    <ImageView
+        android:id="@+id/zoneSixEnd"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/zonesixendpin" />
+
+    <ImageView
+        android:id="@+id/zoneSevenFirst"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
+        app:layout_constraintVertical_bias="0.711"
+        app:srcCompat="@drawable/zonesevenstartpin" />
+
+    <ImageView
+        android:id="@+id/zoneSevenEnd"
+        android:layout_width="18dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
+        app:layout_constraintHorizontal_bias="0.587"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
+        app:layout_constraintVertical_bias="0.712"
+        app:srcCompat="@drawable/zonesevenendpin" />
 
 </android.support.constraint.ConstraintLayout>
