+ pins (now invisible) + most zones combinations work

--- a/app/src/main/res/layout/activity_first_floor_route.xml
+++ b/app/src/main/res/layout/activity_first_floor_route.xml
@@ -26,9 +26,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="108dp"
         android:layout_marginTop="160dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.064"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -42,12 +43,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="108dp"
         android:layout_marginTop="236dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.064"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.062"
+        app:layout_constraintVertical_bias="0.048"
         app:srcCompat="@drawable/zoneeightendpin" />
 
     <ImageView
@@ -58,9 +60,10 @@
         android:layout_marginEnd="100dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="160dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.915"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -73,11 +76,12 @@
         android:layout_marginEnd="104dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.995"
+        app:layout_constraintHorizontal_bias="0.959"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.542"
+        app:layout_constraintVertical_bias="0.518"
         app:srcCompat="@drawable/zonenineendpin" />
 </android.support.constraint.ConstraintLayout>
