--- a/app/src/main/res/layout/activity_ground_floor_route.xml
+++ b/app/src/main/res/layout/activity_ground_floor_route.xml
@@ -8,15 +8,15 @@
 
     <ImageView
         android:id="@+id/groundFloorMap"
-        android:layout_width="408dp"
+        android:layout_width="386dp"
         android:layout_height="584dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.64"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.272"
         app:srcCompat="@drawable/groundfloor3" />
 
     <ImageView
@@ -27,6 +27,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.083"
@@ -43,6 +44,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.074"
@@ -59,6 +61,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.176"
@@ -75,6 +78,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.175"
@@ -91,6 +95,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.28"
@@ -107,6 +112,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.279"
@@ -121,6 +127,7 @@
         android:layout_height="26dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.471"
@@ -137,6 +144,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.545"
@@ -153,6 +161,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.42"
@@ -169,6 +178,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.594"
@@ -183,6 +193,7 @@
         android:layout_height="26dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.907"
@@ -197,6 +208,7 @@
         android:layout_height="26dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -205,13 +217,14 @@
         app:srcCompat="@drawable/zonesixendpin" />
 
     <ImageView
-        android:id="@+id/zoneSevenFirst"
+        android:id="@+id/zoneSevenStart"
         android:layout_width="18dp"
         android:layout_height="26dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.496"
@@ -228,6 +241,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
         app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
         app:layout_constraintHorizontal_bias="0.587"
