--- a/app/src/main/res/layout/activity_full_map.xml
+++ b/app/src/main/res/layout/activity_full_map.xml
@@ -11,11 +11,10 @@
         android:id="@+id/zoomLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:minZoom="0.7"
-        app:minZoomType="zoom"
         app:maxZoom="3.0"
         app:maxZoomType="zoom"
-        >
+        app:minZoom="0.7"
+        app:minZoomType="zoom">
 
         <ImageView
             android:id="@+id/fullInternalMap"
