--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -7,6 +7,20 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="scan"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
         android:id="@+id/mapButton"
         style="@android:style/Widget.Button"
         android:layout_width="270dp"
@@ -21,22 +35,23 @@
         app:layout_constraintBottom_toTopOf="@+id/desksButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.043" />
 
     <Button
         android:id="@+id/desksButton"
         android:layout_width="270dp"
-        android:backgroundTint="#002561"
         android:layout_height="118dp"
-        android:text="Desks"
+        android:backgroundTint="#002561"
         android:fontFamily="@font/ericsson_font"
-        android:textSize="50sp"
+        android:text="Desks"
         android:textColor="#ffffff"
+        android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.646" />
+        app:layout_constraintVertical_bias="0.61" />
 
 
 
