--- a/app/src/main/res/layout/activity_ground_floor_route.xml
+++ b/app/src/main/res/layout/activity_ground_floor_route.xml
@@ -23,6 +23,7 @@
         android:id="@+id/greenPin"
         android:layout_width="18dp"
         android:layout_height="26dp"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
         app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
         app:srcCompat="@drawable/redpinone" />
