--- a/app/src/main/res/layout/activity_treasure.xml
+++ b/app/src/main/res/layout/activity_treasure.xml
@@ -35,7 +35,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.361" />
+        app:layout_constraintVertical_bias="0.361"
+        android:fontFamily="@font/ericsson_font"
+        android:textSize="15sp"
+        />
 
 
 </android.support.constraint.ConstraintLayout>
