--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -7,18 +7,22 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:id="@+id/scanButton"
+        style="@android:style/Widget.Button"
+        android:layout_width="270dp"
+        android:layout_height="118dp"
+        android:layout_marginBottom="44dp"
         android:layout_marginTop="8dp"
-        android:text="scan"
+        android:backgroundTint="#002561"
+        android:fontFamily="@font/ericsson_font"
+        android:text="Scan QR"
+        android:textColor="#ffffff"
+        android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/desksButton"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/mapButton"
@@ -36,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.043" />
+        app:layout_constraintVertical_bias="0.677" />
 
     <Button
         android:id="@+id/desksButton"
@@ -51,7 +55,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.61" />
+        app:layout_constraintVertical_bias="0.498" />
 
 
 
