--- a/app/src/main/res/layout/activity_treasure.xml
+++ b/app/src/main/res/layout/activity_treasure.xml
@@ -38,6 +38,7 @@
         app:layout_constraintVertical_bias="0.361"
         android:fontFamily="@font/ericsson_font"
         android:textSize="15sp"
+        android:textAlignment="center"
         />
 
 
